2015-05-13  Michael R. Crusoe  <mcrusoe@msu.edu>

   * doc/dev/getting-started.rst: added missing dev tools to install list

2015-05-12  Kevin Murray  <spam@kdmurray.id.au>

   * scripts/load-into-counting.py,test/test_scripts.py: Add the number of
   reads processed to the machine readable output files of --summary-info.

2015-05-11  Titus Brown  <titus@idyll.org>

   * scripts/sample-reads-randomly.py: fixed boundary error in
   sample-reads-randomly.py.
   * tests/test_scripts.py: updated tests to correspond with correct
   behavior of sample-reads-randomly.py.

2015-04-23  Lex Nederbragt  <lex.nederbragt@ibv.uio.no>

   * tests/test_scripts.py: added a test for extract-partitions:
   whitespace in fasta header.

2015-04-21  Daniel Standage  <daniel.standage@gmail.com>

   * scripts/sample-reads-randomly.py: use broken paired reader to provide
   paired-end read support.
   * tests/test_scripts.py: change test results to compensate for the change in
   implementation.

2015-04-17  Jessica Mizzi  <mizzijes@msu.edu>

   * tests/test_scripts.py: split test_extract_long_sequences 
   into test_extract_long_sequences_fa and test_extract_long_sequences_fq

2015-04-15  Elmar Bucher <buchere@ohsu.edu>

   * khmer/doc/dev/getting-started.rst: add information for OS X
   mac port and homebrew distro users as well as Linux
   Debian and Ubuntu distro users.
   And add copyright header.

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/tests/khmer_tst_utils.py,doc/dev/a-quick-guide-to-testing.rst
      edited docstring and docs to remind people to make sure tests test
      errors correctly

2015-04-15  Michael R. Crusoe  <mcrusoe@msu.edu>

   * sandbox/make-coverage.py: tweak for importability

2015-04-15  Sherine Awad  <sherine.awad@gmail.com>

   * sandbox/make-coverage.py: restored, was deleted by accident

2015-04-15  Susan Steinman  <steinman.tutoring@gmail.com>

   * khmer/tests/test_scripts.py: changed tests that use `runscript` with