@@ -1,3 +1,8 @@
+2015-05-13  Scott Sievert <sieve121@umn.edu>
+
+   * changed "doc/LICENSE.txt" to "LICENSE" in tests/*, scripts/*, lib/*,
+   sandbox/*, khmer/*
+
 2015-05-13  Michael R. Crusoe  <mcrusoe@msu.edu>
 
    * doc/dev/getting-started.rst: added missing dev tools to install list
